# dataparksearch

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  BUGS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.XML  README.md  TODO  acinclude.m4  aclocal.m4  bootstrap  charset-Makefile.am  charset-configure.in  config.guess  config.sub  configure  configure.ac  configure.in  dp-Makefile.am  dp-configure.in  install.pl  ltconfig
create/mysql/: Makefile.am  Makefile.in  blob.txt  crc-multi.txt  crc.txt  create.txt  cross-crc.txt  drop.txt  multi.txt  url-raid.txt
create/pgsql/: Makefile.am  Makefile.in  blob.pgsql  crc-multi.txt  crc.txt  create.txt  cross-crc.txt  cross.txt  drop.crc-multi.txt  drop.crc.txt  drop.cross.txt  drop.txt  grant.txt  multi.txt
doc/: Makefile.am  Makefile.in  README.html  accent-ru.xml  accent.xml  acronym-ru.xml  acronym.xml  aliases-ru.xml  aliases.xml  aspell-ru.xml  aspell.xml  body-after.html  body-before.html  book-ru.xml  book.xml  bugs-ru.xml  bugs.xml  cache-ru.xml  cache.xml  cachemode-ru.xml  cachemode.xml  catalog  categories-ru.xml  categories.xml  charset-ru.xml  charset.xml  cjk-ru.xml  cjk.xml  content-enc-ru.xml  content-enc.xml  cs-aliases-ru.xml  cs-aliases.xml  data-ru.xml  data.xml  datapark-pdf.dsl  datapark-ru.dsl  datapark.css  datapark.dsl  db2-ru.xml  db2.xml  (+186 more)
doc/samples/: 43n39e.htm.en  README  andromeda.htm.en  books8.htm.en  duo8.htm.en  extended.htm  extended.htm~  ftpsearch.conf  htdb.conf  htmlhttprequest.js  htmlhttprequest_commented.js  indexer.conf  janus.htm.de  janus.htm.en  janus.htm.fr  janus.htm.ru  json.htm  local.conf  m.htm.en  minimal.conf  news.conf  opensearch.htm.en  ph.htm.en  phones.conf  phones.htm.en  qsimilar.conf  qsimilar8.htm.en  qsimilar8.htm.fr  qsimilar8.htm.ru  rss8.htm.en  rutube.conf  rutube8.htm.en  rutube8.htm.fr  rutube8.htm.ru  searchd.conf  simple.htm  simple.htm~  storedoc.htm.en  suggest.htm  suggest.js  (+6 more)
etc/: Makefile.am  Makefile.in  cached.conf-dist  indexer.conf-dist  langmap.conf-dist  opensearch.htm-dist  rss.htm-dist  search.htm-dist  searchd.conf-dist  sections.conf-dist  stopwords.conf-dist  stored.conf-dist  storedoc.htm-dist
etc/acronym/: en.acr  en.cs.acr  en.fido.acr  fr.acr  ru.acr
etc/langmap/: ab.cp1251.lm  ab.koi8-r.lm  ab.utf-8.lm  ady.cp1251.lm  ady.koi8-r.lm  ady.utf-8.lm  af.latin1.bible.lm  af.latin1.lm  af.utf-8.lm  an.utf-8.lm  ar.arabic.lm  ar.arabic.quran.lm  ar.cp1256.lm  ar.cp1256.quran.lm  ar.utf-16be.lm  ar.utf-16le.lm  ar.utf-8.lm  ast.utf-8.lm  az.utf-16be.lm  az.utf-16le.lm  az.utf8.lm  ba.cp1251.lm  ba.koi8-r.lm  ba.utf-8.lm  be.cp1251.lm  be.utf-16be.lm  be.utf-16le.lm  be.utf-8.lm  bg.cp1251.bible.lm  bg.cp1251.lm  bg.cyrillic.bible.lm  bg.cyrillic.lm  bg.utf-8.bible.lm  bg.utf-8.lm  br.latin1.lm  br.utf-8.lm  bs.ascii.lm  bs.cp1250.lm  bs.latin2.lm  bs.utf-8.lm  (+185 more)
etc/stopwords/: ar.sl  ca.sl  ca2.sl  da.sl  da2.sl  de.sl  de.top100.sl  de.top1000.sl  de2.sl  en.big.sl  en.huge.sl  en.medline.sl  en.sl  en.top100.sl  en.top1000.sl  en2.sl  es.sl  es2.sl  fi.sl  fr.sl  fr.top100.sl  fr.top1000.sl  fr2.sl  he.sl  hu.sl  hu2.sl  is.sl  it.sl  it2.sl  ja.sl  lt.sl  lv.sl  nl.sl  nl.top100.sl  nl.top1000.sl  nl2.sl  no.sl  pl.sl  pt.sl  ro.sl  (+6 more)
etc/synonym/: english.big.syn  english.syn  francais.syn  russian.big.syn  russian.syn
include/: Makefile.am  Makefile.in  dps_acronym.h  dps_agent.h  dps_alias.h  dps_base.h  dps_boolean.h  dps_cache.h  dps_carry.h  dps_charsetutils.h  dps_chinese.h  dps_common.h  dps_conf.h  dps_config.h.in  dps_contentencoding.h  dps_cookies.h  dps_crossword.h  dps_db.h  dps_db_int.h  dps_doc.h  dps_efence.h  dps_env.h  dps_execget.h  dps_filence.h  dps_filter.h  dps_ftp.h  dps_guesser.h  dps_hash.h  dps_host.h  dps_hrefs.h  dps_http.h  dps_id3.h  dps_image.h  dps_indexer.h  dps_indexertool.h  dps_log.h  dps_match.h  dps_mkind.h  dps_mutex.h  dps_parsedate.h  (+33 more)
src/: Makefile.am  Makefile.in  acronym.c  agent.c  alias.c  base.c  boolean.c  cache.c  cached.c  carry.c  charset-Makefile.am  charset-utils.c  chinese.c  commands.inc  commands.lst  conf.c  contentencoding.c  cookies.c  crossword.c  db.c  doc.c  dp-Makefile.am  dp.c  dpconv.c  dpguesser.c  dps_image.c  dps_memcpy.inc  dpurl2text.c  ef_page.c  ef_print.c  efence.c  env.c  execget.c  filence.c  filler.c  ftp.c  guesser.c  hash.c  host.c  hrefs.c  (+70 more)
test/: Makefile.am  Makefile.in  README  dps_test-run  dps_test.c  svn-commit.tmp~
test/test-boolean/: acr.conf  indexer.conf  query.res  search.htm  search2.res  search3.res  search4.res  search6.res  test.cmd
test/test-cache/: indexer.conf  query.res  query.tst  search.htm  search.res  search2.res  search3.res  search4.res  search5.res  search6.res  test.cmd
test/test-cached/: cached.conf  indexer.conf  query.res  search.htm  search.res  search2.res  test.cmd
test/test-charset/: indexer.conf  query.res  query.tst  test.cmd
test/test-complexbody/: indexer.conf  query.res  query.tst  test.cmd
test/test-crc-multi/: indexer.conf  query.res  query.tst  search.htm  search.res  search2.res  test.cmd
test/test-follow/: indexer.conf  query.res  query.tst  test.cmd
test/test-hrefonly/: indexer.conf  query.res
test/test-include/: include.conf  indexer.conf  query.res  query.tst  test.cmd
test/test-mailto/: indexer.conf  query.res  query.tst
test/test-multi/: indexer.conf  query.res  query.tst  search.htm  search.res  test.cmd
test/test-notfound/: indexer.conf  query.res  query.tst  test.cmd
test/test-notmodified/: indexer.conf  query.res  query.tst  test.cmd
test/test-parsehtml/: indexer.conf  json.htm  query.res  query.tst  search-j.res  search.htm  search.res  search2.res  search3.res  search4.res  test.cmd
test/test-quotes/: indexer.conf  query.res
test/test-revalias/: dict.res  dict.tst  indexer0.conf  indexer1.conf  test.cmd  url.tst  url0.res  url1.res
test/test-revalias1/: indexer.conf  query.res  query.tst  test.cmd
test/test-sample/: indexer.conf  query.res  query.tst  search.htm  search.res  search2.res  test.cmd
test/test-sections/: cz.sl  (+13 more)
(+191 files in other folders)
