sysconf_DATA = \
indexer.conf-dist \
search.htm-dist \
rss.htm-dist \
opensearch.htm-dist \
stopwords.conf-dist \
langmap.conf-dist \
searchd.conf-dist \
stored.conf-dist \
storedoc.htm-dist \
cached.conf-dist \
sections.conf-dist 

langmap_FILES = \
langmap/ab.cp1251.lm \
langmap/ab.koi8-r.lm \
langmap/ab.utf-8.lm \
langmap/ady.cp1251.lm \
langmap/ady.koi8-r.lm \
langmap/ady.utf-8.lm \
langmap/af.latin1.lm \
langmap/af.latin1.bible.lm \
langmap/af.utf-8.lm \
langmap/an.utf-8.lm \
langmap/ar.arabic.lm \
langmap/ar.arabic.quran.lm \
langmap/ar.cp1256.lm \
langmap/ar.cp1256.quran.lm \
langmap/ar.utf-8.lm \
langmap/ar.utf-16be.lm \
langmap/ar.utf-16le.lm \
langmap/ast.utf-8.lm \
langmap/az.utf8.lm \
langmap/ba.cp1251.lm \
langmap/ba.koi8-r.lm \
langmap/ba.utf-8.lm \
langmap/be.cp1251.lm \
langmap/be.utf-8.lm \
langmap/be.utf-16be.lm \
langmap/be.utf-16le.lm \
langmap/bg.cp1251.lm \
langmap/bg.cp1251.bible.lm \
langmap/bg.cyrillic.lm \
langmap/bg.cyrillic.bible.lm \
langmap/bg.utf-8.lm \
langmap/bg.utf-8.bible.lm \
langmap/br.latin1.lm \
langmap/br.utf-8.lm \
langmap/bs.ascii.lm \
langmap/bs.cp1250.lm \
langmap/bs.latin2.lm \
langmap/bs.utf-8.lm \
langmap/ca.latin1.lm \
langmap/ce.utf-8.lm \
langmap/cs.cp1250.lm \
langmap/cs.iso-8859-1.lm \
langmap/cs.latin2.lm \
langmap/cs.utf-8.lm \
langmap/cv.utf-8.lm \
langmap/cy.latin1.lm \
langmap/cy.utf-8.lm \
langmap/da.cp1252.lm \
langmap/da.latin1.lm \
langmap/da.latin1.bible.lm \
langmap/de.cp1252.lm \
langmap/de.iso-8859-15.lm \
langmap/de.latin1.lm \
langmap/de.latin1.bible.lm \
langmap/de.utf8.lm \
langmap/el.cp1253.lm \
langmap/el.greek.lm \
langmap/el.utf-8.lm \
langmap/en.ascii.lm \
langmap/en.utf-8.lm \
langmap/en.utf-16be.lm \
langmap/en.utf-16le.lm \
langmap/eo.latin3.lm \
langmap/eo.latin3.as.lm \
langmap/eo.latin1-h.as.lm \
langmap/eo.latin1-x.as.lm \
langmap/eo.utf8.as.lm \
langmap/es.latin1.lm \
langmap/es.latin1.bible.lm \
langmap/et.cp1257.lm \
langmap/et.cp775.lm \
langmap/et.iso-8859-13.lm \
langmap/et.latin4.lm \
langmap/et.utf-8.lm \
langmap/eu.latin1.lm \
langmap/eu.utf-8.lm \
langmap/fa.isiri3342.lm \
langmap/fa.utf-8.lm \
langmap/fi.latin1.lm \
langmap/fr.latin1.lm \
langmap/fr.latin1.bible.lm \
langmap/fr.utf-8.lm \
langmap/ga.latin1.lm \
langmap/ga.utf-8.lm \
langmap/he.hebrew.lm \
langmap/he.utf-8.lm \
langmap/hr.ascii.lm \
langmap/hr.cp1250.lm \
langmap/hr.cp1250.bible.lm \
langmap/hr.latin2.lm \
langmap/hr.utf-8.lm \
langmap/hu.cp1250.lm \
langmap/hu.latin2.lm \
langmap/hu.utf-8.lm \
langmap/hy.armscii-8.lm \
langmap/hy.utf-8.lm \
langmap/id.latin1.lm \
langmap/id.utf-8.lm \
langmap/is.latin1.lm \
langmap/is.utf-8.lm \
langmap/it.latin1.lm \
langmap/it.utf-8.lm \
langmap/ja.euc-jp.lm \
langmap/ja.iso-2022-jp.lm \
langmap/ja.sjis.lm \
langmap/ja.utf-8.lm \
langmap/ka.georgian-academy.lm \
langmap/ka.georgian-ps.lm \
langmap/ka.geostd8.lm \
langmap/ka.utf-8.lm \
langmap/kk.utf-8.lm \
langmap/ko.euc-kr.lm \
langmap/ko.utf8.lm \
langmap/la.ascii.lm \
langmap/la.utf-8.lm \
langmap/lt.cp1257.lm \
langmap/lt.cp775.lm \
langmap/lt.iso-8859-13.lm \
langmap/lt.latin4.lm \
langmap/lt.utf-8.lm \
langmap/lv.cp1257.lm \
langmap/lv.cp775.lm \
langmap/lv.iso-8859-13.lm \
langmap/lv.latin4.lm \
langmap/lv.utf-8.lm \
langmap/mi.latin1.lm \
langmap/mi.utf-8.lm \
langmap/mt.latin1.lm \
langmap/mt.utf-8.lm \
langmap/nl.windows-1252.lm \
langmap/nl.latin1.lm \
langmap/nl.latin1.bible.lm \
langmap/nl.utf-8.lm \
langmap/no.latin1.lm \
langmap/no.utf-8.lm \
langmap/os.utf-8.lm \
langmap/pl.cp1250.lm \
langmap/pl.cp852.lm \
langmap/pl.latin2.lm \
langmap/pl.utf-8.lm \
langmap/pt.latin1.lm \
langmap/pt.utf-8.lm \
langmap/pt-br.latin1.lm \
langmap/pt-br.utf-8.lm \
langmap/ro.ascii.lm \
langmap/ro.cp1250.lm \
langmap/ro.latin2.lm \
langmap/ro.utf-8.lm \
langmap/ru-old.koi8-c.lm \
langmap/ru-old.utf-8.lm \
langmap/ru.cp1251.lm \
langmap/ru.cp866.lm \
langmap/ru.cyrillic.lm \
langmap/ru.iso-8859-1.lm \
langmap/ru.koi-7.lm \
langmap/ru.koi8-r.lm \
langmap/ru.maccyr.lm \
langmap/ru.utf8.lm \
langmap/ru.utf-16be.lm \
langmap/ru.utf-16le.lm \
langmap/ru.windows-1252.lm \
langmap/sk.ascii.lm \
langmap/sk.cp1250.lm \
langmap/sk.latin2.lm \
langmap/sk.utf-8.lm \
langmap/sl.ascii.lm \
langmap/sl.cp1250.lm \
langmap/sl.latin2.lm \
langmap/sl.utf-8.lm \
langmap/sq.latin1.lm \
langmap/sq.utf-8.lm \
langmap/sr.cp1250.lm \
langmap/sr.latin2.lm \
langmap/sr.utf-8.lm \
langmap/sv.latin1.lm \
langmap/sv.latin1.bible.lm \
langmap/sv.utf-8.lm \
langmap/sv.utf-8.bible.lm \
langmap/sw.latin1.lm \
langmap/sw.utf-8.lm \
langmap/ta.tscii.lm \
langmap/ta.utf-8.lm \
langmap/th.cp874.lm \
langmap/th.tis-620.lm \
langmap/th.utf-8.lm \
langmap/tl.ascii.lm \
langmap/tl.ascii.bible.lm \
langmap/tl.utf-8.lm \
langmap/tr.cp1254.lm \
langmap/tr.cp857.lm \
langmap/tr.latin5.lm \
langmap/tr.utf-8.lm \
langmap/tt.utf-8.lm \
langmap/uk.cp1251.lm \
langmap/uk.cp866u.lm \
langmap/uk.koi8-u.lm \
langmap/uz-cyr.utf-8.lm \
langmap/uz-lat.utf-8.lm \
langmap/vi.utf-8.lm \
langmap/vi.viscii.lm \
langmap/wa.utf-8.lm \
langmap/zh.big5.lm \
langmap/zh.utf8.lm \
langmap/zh.gb18030.lm \
langmap/zh.gb2312.lm \
langmap/zh.gbk.lm \
langmap/zh-min-nan.utf-8.lm

stopwords_FILES= \
stopwords/ar.sl \
stopwords/ca.sl \
stopwords/ca2.sl \
stopwords/cz.sl \
stopwords/da.sl \
stopwords/da2.sl \
stopwords/de.sl \
stopwords/de.top100.sl \
stopwords/de.top1000.sl \
stopwords/de2.sl \
stopwords/en.big.sl \
stopwords/en.huge.sl \
stopwords/en.medline.sl \
stopwords/en.sl \
stopwords/en2.sl \
stopwords/en.top100.sl \
stopwords/en.top1000.sl \
stopwords/es.sl \
stopwords/es2.sl \
stopwords/fi.sl \
stopwords/fr.sl \
stopwords/fr2.sl \
stopwords/fr.top100.sl \
stopwords/fr.top1000.sl \
stopwords/he.sl \
stopwords/hu.sl \
stopwords/hu2.sl \
stopwords/is.sl \
stopwords/it.sl \
stopwords/it2.sl \
stopwords/ja.sl \
stopwords/lt.sl \
stopwords/lv.sl \
stopwords/nl.sl \
stopwords/nl2.sl \
stopwords/nl.top100.sl \
stopwords/nl.top1000.sl \
stopwords/no.sl \
stopwords/pl.sl \
stopwords/pt.sl \
stopwords/ro.sl \
stopwords/ru.sl \
stopwords/ru2.sl \
stopwords/sk.sl \
stopwords/th.sl \
stopwords/tr.sl \
stopwords/uk.sl

synonym_FILES = \
synonym/english.syn \
synonym/english.big.syn \
synonym/francais.syn \
synonym/russian.syn \
synonym/russian.big.syn 

acronym_FILES = \
acronym/en.cs.acr \
acronym/en.fido.acr \
acronym/en.acr \
acronym/fr.acr \
acronym/ru.acr


EXTRA_DIST = ${sysconf_DATA} ${langmap_FILES} ${stopwords_FILES} ${synonym_FILES} ${acronym_FILES}


install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)/stopwords
	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)/langmap
	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)/synonym
	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)/acronym
	list='${stopwords_FILES}'; \
	for p in $$list; do \
		${INSTALL_DATA} $(srcdir)/$$p $(DESTDIR)$(sysconfdir)/stopwords/ ; \
	done
	list='${langmap_FILES}'; \
	for p in $$list; do \
		${INSTALL_DATA} $(srcdir)/$$p $(DESTDIR)$(sysconfdir)/langmap/ ; \
	done
	list='${synonym_FILES}'; \
	for p in $$list; do \
		${INSTALL_DATA} $(srcdir)/$$p $(DESTDIR)$(sysconfdir)/synonym/ ; \
	done
	list='${acronym_FILES}'; \
	for p in $$list; do \
		${INSTALL_DATA} $(srcdir)/$$p $(DESTDIR)$(sysconfdir)/acronym/ ; \
	done

uninstall-local:
	list='${langmap_FILES} ${stopwords_FILES} $(synonym_FILES) $(acronym_FILES)'; \
	for p in $$list; do \
		rm -f rm -f $(DESTDIR)$(sysconfdir)/$$p; \
	done
	-rmdir $(DESTDIR)$(sysconfdir)/stopwords
	-rmdir $(DESTDIR)$(sysconfdir)/langmap
	-rmdir $(DESTDIR)$(sysconfdir)/synonym
	-rmdir $(DESTDIR)$(sysconfdir)/acronym
