
include_HEADERS = \
dps_common.h \
dps_conf.h \
dps_config.h \
dps_db.h \
dps_db_int.h \
dps_hrefs.h \
dps_indexer.h \
dps_log.h \
dps_url.h \
dps_spell.h \
dps_mutex.h \
dps_utils.h \
dps_charsetutils.h \
dpsearch.h \
dps_search_tl.h \
dps_ftp.h \
dps_socket.h \
dps_host.h \
dps_xmalloc.h \
dps_id3.h \
dps_http.h \
dps_cache.h \
dps_boolean.h \
dps_server.h \
dps_searchtool.h \
dps_searchcache.h \
dps_alias.h \
dps_env.h \
dps_agent.h \
dps_word.h \
dps_parsehtml.h \
dps_stopwords.h \
dps_parser.h \
dps_proto.h \
dps_robots.h \
dps_signals.h \
dps_execget.h \
dps_services.h \
dps_doc.h \
dps_unicode.h \
dps_unidata.h \
dps_uniconv.h \
dps_sgml.h \
dps_guesser.h \
dps_contentencoding.h \
dps_vars.h \
dps_sdp.h \
dps_synonym.h \
dps_match.h \
dps_store.h \
dps_template.h \
dps_result.h \
dps_textlist.h \
dps_mkind.h \
dps_chinese.h \
dps_parsexml.h \
dps_wild.h \
dps_hash.h \
dps_crossword.h \
dps_parsedate.h \
dps_sqldbms.h \
dps_base.h \
dps_image.h \
dps_indexertool.h \
dps_efence.h \
dps_carry.h \
dps_acronym.h \
dps_sea.h \
dps_filence.h \
dps_cookies.h \
dps_filter.h






